# entity-detection-cv

./: README.md  pyproject.toml
src/: config.yaml  custom_types.py  dataset.py  evaluate.py  model.py  train.py  utils.py  visualize.py  visualize_samples.py
